traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:10: error: value droite is not a member of Unit
possible cause: maybe a semicolon is missing before `value droite'?
  } droite()
    ^